refactor: address PR review comments for MVP REST APIs After Module Restructure
refactor: address PR review comments for MVP REST APIs

This commit addresses all 9 review comments received on the PR:

1. Audit Masking: Changed masked value from "***MASKED***" to "MASKED"
   in AuditMaskingSerializer and all related tests.

2. Configuration Refactoring: Replaced DefaultProjectConfig with
   dedicated KmsConfig class. Since project ID is mandatory in all APIs,
   we only need default KMS ID configuration. New structure uses
   `grayskull.kms.defaultKeyId` for better separation of concerns and
   extensibility.

3. Java 16+ Idiom: Replaced .collect(Collectors.toList()) with .toList()
   in SecretServiceImpl and SecretRepositoryImpl.

4. Audit Integrity: Updated AuditAspect to fail operations if audit
   metadata serialization fails, rather than swallowing errors. This
   ensures we never allow operations to proceed without proper auditing.

5. Response Schema as Source of Truth: Updated extractResourceVersion()
   in AuditAspect to extract from response entity schema
   (currentDataVersion/dataVersion) rather than hardcoding values.

6. Resource Name Extraction: Updated extractResourceName() to prefer
   response entities as source of truth with fallback to method arguments
   for void operations. Added projectId and name fields to
   UpgradeSecretDataResponse for consistency with CreateSecretResponse.

7. Mapper Naming: Refactored SecretMapper method from
   secretToCreateSecretResponse() to secretToSecretResponse(), following
   generic entity-to-entity mapping pattern rather than action-specific
   naming.

8. SPI Dependencies: Clarified that spi/pom.xml dependencies inherit
   versions from parent and use provided scope intentionally for SPI
   pattern (no code changes needed).

9. Entity Consistency: Added id field to SecretData base class and
    updated SecretDataEntity to override getId() with @Id annotation,
    making it consistent with Secret and Project ent